samples/_failures_safe/1761043697_f8bf7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb3bbaf4.c: In function ‘main’:
./samples/SAFE/__tmp_fb3bbaf4.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else {
      |                 ^
./samples/SAFE/__tmp_fb3bbaf4.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb3bbaf4.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb3bbaf4.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb3bbaf4.c:152:17: error: expected declaration or statement at end of input
